Bug 378784 - Konsole doesn't notify user if it cannot save profile
Summary: Konsole doesn't notify user if it cannot save profile
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-04-14 18:50 UTC by Oleksandr Senkovych
Modified: 2017-04-27 14:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Proposed fix (526 bytes, patch)
2017-04-14 18:50 UTC, Oleksandr Senkovych
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oleksandr Senkovych 2017-04-14 18:50:17 UTC
Created attachment 105027 [details]
Proposed fix

If for some reason (e.g. permissions) Konsole cannot save profile - it doesn't notify user about it in any way.

Proposed solution is to display warning window if konsole cannot write profile.
Comment 1 Kurt Hindenburg 2017-04-18 02:05:18 UTC
Thanks I tend to agree with the patch although the dialog is rather vague as I'm sure how many people have 'system administrators'.  We could also catch the return value and create our own dialog.
Comment 2 Kurt Hindenburg 2017-04-20 02:05:25 UTC
https://phabricator.kde.org/D5519

If anyone is interested in looking at possible fix
Comment 3 Kurt Hindenburg 2017-04-27 14:28:53 UTC
Git commit aaee4c713c784f481e4918e54b8429e2e531d9f6 by Kurt Hindenburg.
Committed on 27/04/2017 at 14:26.
Pushed by hindenburg into branch 'master'.

Check to verify we have write permissions when saving profiles

Summary:
Use custom dialog instead of KConfig's generic vague one.

Differential Revision: https://phabricator.kde.org/D5519

M  +5    -2    src/ProfileManager.cpp
M  +4    -0    src/ProfileWriter.cpp

https://commits.kde.org/konsole/aaee4c713c784f481e4918e54b8429e2e531d9f6