Check to verify we have write permissions when saving profiles

Summary:
Use custom dialog instead of KConfig's generic vague one.

BUG: 378784

Differential Revision: https://phabricator.kde.org/D5519